created NewListDialog, created ShoppingListNamesFragment, save database ShopListName, created list_name_item.xml, created adapter for list name ShopListName, deleting ShopListName

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="new_item">New</string>
     <string name="title_hint">Title</string>
     <string name="description_hint">Description</string>
+    <string name="new_list">New List Name</string>
+    <string name="list_name">List Name</string>
+    <string name="create_list">Create List</string>
+    <string name="delete_alert">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_item">Do you want delete this item?</string>
 </resources>
