--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="create_list">Create List</string>
     <string name="delete_alert">Delete</string>
     <string name="cancel">Cancel</string>
+    <string name="update">Update List</string>
+    <string name="update_list_name">Update List Name</string>
     <string name="delete_item">Do you want delete this item?</string>
 </resources>
